fix [#34825] Transparent background of Empty Images clips objects behind them away when Empty is not selected

allow 'Transparency' option to be used on empty-images.